changed order of stream closing and thread joining

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,11 +2,12 @@
 
 
 
-
+RoboCore_requirePlugin(RoboCore::RTK)
 
 add_executable( UbloxGPSExample
         main.cpp
         )
 
 target_link_libraries(UbloxGPSExample
-        ublox)
+        ublox
+        RoboCore::RTK)
