Added POSITION_INDEPENDENT_CODE to ublox_msgs and ublox_gps targets

--- a/ublox_gps/CMakeLists.txt
+++ b/ublox_gps/CMakeLists.txt
@@ -17,3 +17,5 @@ target_link_libraries(ublox_gps PUBLIC
     pthread
     ublox_msgs
 )
+
+set_property(TARGET ublox_gps PROPERTY POSITION_INDEPENDENT_CODE ON)
